fixed switching look back period dates